--- a/.github/workflows/Update.yml
+++ b/.github/workflows/Update.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
             echo "commit_message=Update $(date +"%Y-%m-%d %H:%M:%S")" >> "$GITHUB_OUTPUT"
  
-      - name: Apply IP Changes
+      - name: Apply Changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
          commit_message: ${{ steps.msg.outputs.commit_message }}
